--- a/A_00/style.css
+++ b/A_00/style.css
@@ -1,3 +1,8 @@
+/*Aufgabe: 0
+Name: Nadine Limberger
+Matrikel: 255438
+Datum: 20.03.2017
+Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde nicht kopiert und auch nicht diktiert.*/
 body {text-align: center;
 	  font-size: 30pt;
 	  padding-top: 1.5em;}
