--- a/A_02/style.css
+++ b/A_02/style.css
@@ -4,12 +4,16 @@ Matrikelnr.: 255346
 Datum: 30.03.2017
 Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde nicht kopiert und auch nicht diktiert. */
 
+body {
+	width: 1000px;
+}
+
 div {
 	border: solid black;
-	width:95px;
-	height:95px;
-	float:left;
-	padding:1px;
+	width: 95px;
+	height: 95px;
+	float: left;
+	padding: 0.5em;
 	text-align: center;	
 	overflow: auto;
 }
