--- a/A_02/style.css
+++ b/A_02/style.css
@@ -6,6 +6,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 
 body {
 	width: 1000px;
+	height: 1000px;
 }
 
 div {
