--- a/A_03/style.css
+++ b/A_03/style.css
@@ -1,39 +1,32 @@
-/* Aufgabe 2a
+/* Aufgabe 3.2
 	Name:Nadine Limberger
 	Matrikelnr.: 255346
 	Datum: 30.03.2017
 	Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde nicht kopiert und auch nicht diktiert.*/
-	
-	body {
-	height: 400px;
-	width: 1000px;
-	}
-	
-	#ziehstapel {
-	background-color: red;
-	width: 150px;
+div {
 	height: 200px;
-	border: 2px solid black;
-	margin-left: 200px;
-	margin-top: 50px;
-	}
-	
-	#ablegstapel {
-	background-color: green;
 	width: 150px;
-	height: 200px;
 	border: 2px solid black;
-	margin-left: 450px;
-	}
-	
-	#handkarten {
-	background-color: blue;
-	width: 150px;
-	height: 200px;
-	border: 2px solid black;
-	margin-left: 1000px;
-	}
-	
-	/* .handkarten {
-	background-color: black;
-	} */
+	text-align: center;
+	padding-top: 30px;
+	float: left;
+}
+
+#deck {
+	color: black;
+	background-color: #FFEFd5;
+	margin-left: 0px;
+	margin-top: 0px,
+}
+
+.Handkarten {
+	background-color: #CD5C5C ;
+	margin-left: 10px;
+	margin-top: 300px;
+}
+
+#discard {
+	background-color: #FFA07A;
+	margin-left: 10px;
+	margin-top: 0px;
+}
